[package]
authors = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-runtime"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracing-instrument = []

[dependencies]
lazy_static = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
zenoh-macros = { workspace = true }
zenoh-result = { workspace = true, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ron = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
flume = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["ron"]
