[workspace]

[package]
name = "zenoh-wasm-client-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zenoh = { path = "../../zenoh", default-features = false, features = ["transport_ws"] }
flume = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "DedicatedWorkerGlobalScope",
  "Element",
  "ErrorEvent",
  "HtmlElement",
  "MessageEvent",
  "Window",
  "Worker",
  "WorkerOptions",
  "WorkerType",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
